--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src=""></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/main/main.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
