--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/main/main.html"></include>
+    <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
