--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
     <include src="./partials/main/main.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/btn-to-top.html"></include>
   </body>
 </html>
