--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
     <include src="./partials/pagination.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/btn-to-top.html"></include>
+    <include src="./partials/card-modal.html"></include>
   </body>
 </html>
